@@ -1,5 +1,8 @@
 2005-08-01    <tino@firebird.03.softkill.net>
 
+	* Makefile.proto, Makefile.d.proto, Makefile-tino.sh: started to
+	support .cc/.hh files.
+
 	* filetool.h (tino_file_filenameptr): added
 
 2005-07-31    <tino@firebird.03.softkill.net>
